# hello-github-actions

./: Readme.md
.github/workflows/: build-cpp.yaml  continuous-integration-workflow.yml  docker.yaml  repository-release.yaml  update-release.yaml
src/: CMakeLists.txt  sqr.cpp  sqr.hpp  tutorial.cpp  version.h.in
